<resources>
    <string name="app_name">UniCalendar</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="loginBtn">Login</string>
    <string name="login">login\n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="clubs_array">

        <item>Internal Exam</item>
        <item>External Exam</item>
        <item>University</item>
        <item>Holiday</item>
        <item>Sports Club</item>
        <item>Samvaad</item>
        <item>IETE</item>
        <item>GDSC</item>
        <item>CSI</item>
        <item>Shutterbugs</item>
        <item>Readers Community</item>
        <item>Decibel</item>

    </string-array>

    <string-array name="venue_array">
        <item>-</item>
        <item>MMH</item>
        <item>Seminar Hall</item>
        <item>Medical Sports Ground</item>
        <item>Open Canteen</item>
        <item>Center Foyer</item>
        <item>ClassRoom</item>

    </string-array>
</resources>